fix: content container overflow

--- a/src/renderer/src/assets/styles/index.scss
+++ b/src/renderer/src/assets/styles/index.scss
@@ -151,7 +151,6 @@ body,
 }
 
 #content-container {
-  overflow: hidden;
   background-color: var(--color-background);
   border-top: 0.5px solid var(--color-border);
 }
